# guardian_cli

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/api/: mod.rs  models.rs  queries.rs
src/cli/: audit.rs  login.rs  logout.rs  mod.rs  role.rs  token.rs  user.rs  whoami.rs
src/config/: mod.rs
src/output/: mod.rs
